--- a/style.css
+++ b/style.css
@@ -23,12 +23,20 @@ nav li:first-child img{
 
 }
 
+nav li a{
+    text-decoration: none;
+
+}
+
 nav li:first-child{
     margin-right: auto;
+    margin-left: 100px;
 }
 
 nav li:last-child{
     margin-left: auto;
+    margin-right: 100px;
+
 }
 
 nav li button{
@@ -37,4 +45,37 @@ nav li button{
     border: 0px;
     border-radius: 20px;
     color: white;
+}
+
+section {
+    padding-top: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    overflow-x: hidden;
+    
+}
+
+section h1{
+    margin-left: 10%;
+    font-size: 35px;
+    padding-top: 120px;
+}
+
+section .one{
+    width: 500px;
+    height: 500px;
+    border-radius: 40px;
+    margin-left: auto;
+    object-fit: cover;
+    transform: translate(-30%,-10%);
+    
+}
+
+section .two{
+    width: 500px;
+    height: 500px;
+    border-radius: 40px;
+    margin-right: auto;
+    object-fit: cover;
+    transform: translate(30%,0%);
 }
