--- a/style.css
+++ b/style.css
@@ -79,3 +79,36 @@ section .two{
     object-fit: cover;
     transform: translate(30%,0%);
 }
+
+main {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    margin-left: 200px;
+    margin-right: 200px;
+}
+
+main .left {
+    display: grid;
+    grid-template-rows: repeat(5,20%);
+    margin-top: 100px;
+ 
+}
+
+main .left .option {
+    display: grid;
+    grid-template-columns: 40% 60%;
+
+    
+}
+
+main .left .option img {
+    width: 100px;
+    height: 100px;
+    
+}
+
+main .right img{
+    border-radius: 40px;
+    width: 500px;
+    height: 500px;
+}
